--- a/index.html
+++ b/index.html
@@ -2900,6 +2900,30 @@ Listed alphabetically:
 		</div>
 			
 	</div>
+
+	<div class="menuSlider" id="genitalSizeSlider">
+		<div class="linesMenuSlider">
+			<img src="images/lines.png" height="17" width="23"> 
+			</div>
+			
+			<div class="textinmenuLeft">
+			bee1	
+			</div>
+	
+			<div class="textinmenuCenter">
+bee			</div>
+	
+			<div class="textinmenuRight">
+			bee3
+			</div>
+
+		<div id="slidergs" class="slider">			
+			 <script>
+				var mySlider2 = new dhtmlXSlider(slidergs, 315, null, false, 0, 100, 50, 1);				
+			</script>
+		</div>
+			
+	</div>
 	
 	<div class="menuInanimateObjects" id="cockTypeMenu">
 
@@ -5167,4 +5191,5 @@ startup = "False";
 </div>
 
 </body>
+
 </html>
